2003-12-28 Damien Sandras  <dsandras@seconix.com>

	* configure.in: Incremented SCHEMA_AGE.

	* NEWS: Updated with latest CVS news.
	
	* gnomemeeting.schemas.in.in: Moved H.245 Tunneling and Fast Start
	to the new protocols/h323/ section and added key for early H.245
	support.

	* src/common.h: Added define for the protocols/h323 section.
	
	* src/config.cpp, src/endpoint.cpp, src/pref_window.cpp: Changes
	consecutive to the move of the H.245 Tunneling and Fast Start
	keys. Added support to change Early H.245 in Setup.
	
2003-12-28 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest CVS news.
	
	* configure.in: Incremented SCHEMA_AGE.
	
	* gnomemeeting.schemas.in.in: Added key to enable/disable calls
	after 30 seconds of inactivity. Renamed the CALL_CONTROL section
	in CALL_OPTIONS.

	* src/common.h, src/config.cpp, src/connection.cpp, src/endpoint.cpp,
	src/endpoint.h, src/ils.cpp, src/menu.cpp, src/pref_window.cpp:
	s/CALL_CONTROL/CALL_OPTIONS. Added possibility to clear automatically
	calls after 30 seconds of inactivity.
	
2003-12-28 Damien Sandras  <dsandras@seconix.com>

	* NEWS: Updated with latest CVS news.

	* lib/dialog.c, lib/dialog.h: Modified 
	gnomemeeting_warning_dialog_on_widget so that it uses the parent window
	and a key to determine if the dialog has to be displayed or not
	next time. The default is to display again.

	* src/chat_window.cpp: Code cleanups.
	
	* src/common.h: Removed unnecessary widgets from GmPrefWindow now
	that gnomemeeting_warning_dialog_on_widget has a better API.
	
	* src/config.cpp: Addapted to new dialog.h.
	
	* src/druid.cpp, src/endpoint.cpp, src/endpoint.h, 
	gnomemeeting.schemas.in.in, src/pref_window.cpp: 
	Removed bandwidth management code as it was giving problems.
	
	* src/misc.cpp, src/misc.h: Added printf like syntax to 
	gnomemeeting_log_insert.
	
	* src/videograbber.cpp, src/videograbber.h: Cleaned and documented
	code for 1.00. Improved video grabber performances for preview mode.