@@ -194,7 +194,7 @@
       <applyto>/apps/gnomemeeting/view/show_splash</applyto>
       <owner>GnomeMeeting</owner>
       <type>bool</type>
-      <default>true</default>
+      <default>false</default>
       <locale name="C">
 	<short>Show splash screen</short>
 	<long>If enabled, the splash screen will be displayed when GnomeMeeting starts.</long>
