@@ -1,5 +1,11 @@
 2003-12-28 Damien Sandras  <dsandras@seconix.com>
 
+	* src/callbacks.cpp: Save the position of the prefs window
+	when exiting. Hide all windows before clearing the calls
+	(except the docklet).
+	
+2003-12-28 Damien Sandras  <dsandras@seconix.com>
+
 	* configure.in: Incremented SCHEMA_AGE.
 
 	* NEWS: Updated with latest CVS news.
